metadata/force-app/main/default/objects/Product2/fields/checkboxmanaged__c.field-meta.xml
<CustomField>
    <fullName>checkboxmanaged__c</fullName>
    <defaultValue>false</defaultValue>
    <description>test</description>
    <label>checkboxmanaged</label>
    <type>Checkbox</type>
</CustomField>