metadata/force-app/main/default/objects/Product2/fields/checkboxtest__c.field-meta.xml
<CustomField>
    <fullName>checkboxtest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>checkboxtest</label>
    <type>Checkbox</type>
</CustomField>