metadata/force-app/main/default/objects/Product2/fields/multipickmanaged__c.field-meta.xml
<CustomField>
    <fullName>multipickmanaged__c</fullName>
    <label>multipickmanaged</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>pick</valueSetName>
    </valueSet>
</CustomField>