metadata/force-app/main/default/objects/Product2/fields/prodGreen12_0__c.field-meta.xml
<CustomField>
    <fullName>prodGreen12_0__c</fullName>
    <defaultValue>false</defaultValue>
    <label>prodGreen12.0</label>
    <type>Checkbox</type>
</CustomField>