metadata/force-app/main/default/objects/Product2/fields/textareamanaged__c.field-meta.xml
<CustomField>
    <fullName>textareamanaged__c</fullName>
    <description>test</description>
    <label>textareamanaged</label>
    <type>TextArea</type>
</CustomField>