metadata/force-app/main/default/objects/Product2/recordTypes/managedrecordtype.recordType-meta.xml
<RecordType>
    <fullName>managedrecordtype</fullName>
    <active>true</active>
    <label>managedrecordtype</label>
</RecordType>